frontend/src/pages/EmployerDashBoard/ProfilePage/ProfilePage.css
.drawer-backdrop {
  position: fixed;
  inset: 0;
  background: rgba(0, 0, 0, 0.35);
  z-index: 999;
}

.profile-drawer {
  position: fixed;
  top: 0;
  right: 0;
  width: 340px;
  height: 100vh;
  background: #ffffff;
  z-index: 1000;
  /*padding: 20px;*/
  display: flex;
  flex-direction: column;
  box-shadow: -12px 0 32px rgba(0, 0, 0, 0.15);
  animation: slideIn 0.25s ease-out;
}

@keyframes slideIn {
  from { transform: translateX(100%); }
  to { transform: translateX(0); }
}

/* Header */
.drawer-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.drawer-header h3 {
  margin: 0;
  font-size: 18px;
  font-weight: 600;
}

.close-btn {
  background: transparent;
  border: none;
  font-size: 20px;
  cursor: pointer;
  color: #ffffff;
}

.close-btn img {
  width: 20px;
}

.builder-action.close-btn {
  border-color: white;
}

.builder-action.close-btn:hover {
  background-color: #7da0ce;
  border-color: white;
}

.profile-hero {
  display: flex;
  flex-direction: column;
  text-align: center;
  background: linear-gradient(
    135deg,
    #bcd5f3 0%,
    #73d7ff 35%,
    #005eff 100%
  );
  padding: 10px;
  padding-bottom: 30px;
  gap: 15px;
}

.profile-hero-top {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.profile-hero-bottom {
  padding-left: 7px;
  font-size: 13px;
  color: #f3f3f3;
  font-weight: 500;
}

.profile-hero-bottom p {
  margin: 0;
}

.profile-hero-left {
  display: flex;
  justify-content: flex-start;
  gap: 15px;
}

.profile-hero-name {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

.profile-hero-name h3 {
  font-size: 24px;
  margin: 0;
  font-weight: 700;
  color: white;
  margin-top: 10px;
}

.display-name-input-wrapper {
  display: inline-flex;
  align-items: center;
  gap: 6px; 
  width: fit-content;
  justify-content: center;
  flex-direction: column;
  margin-top: 10px;
}

.display-name-input {
  background: none;
  font-size: 24px;
  margin: 0;
  font-weight: 700;
  color: white;
  padding: 0;
  border: 1px solid #ffffff74;
  min-width: 70%;
  text-align: center;
  border-radius: 10px;
}

.display-name-input::placeholder {
  color: #f3f3f38f;
  font-weight: 400;
  font-size: 16px;
}

.profile-hero-name p {
  font-size: 13px;
  margin: 0;
  color: #f2f2f2;
}


.avatar-wrapper {
  position: relative;
  display: inline-block;
}

.profile-avatar {
  width: 76px;
  height: 76px;
  border-radius: 50%;
  object-fit: cover;
  border: 1px solid rgba(0, 0, 0, 0.15);
}


.change-avatar {
  position: absolute;
  bottom: -6px;
  right: -6px;
  font-size: 11px;
  padding: 4px 8px;
  border-radius: 999px;
  border: 1px solid #e5e7eb;
  background: #fff;
  cursor: pointer;
}

.profile-hero h4 {
  margin: 12px 0 4px;
  font-size: 16px;
  font-weight: 600;
}

.progress-item {
  display: flex;
  justify-content: space-between;
  padding: 10px;
  cursor: pointer;
  border-radius: 5px;
  transition: 0.2s ease;
}

.progress-item-left {
  display: flex;
  gap: 10px;
}

.progress-item-left img {
  width: 30px;
}

.progress-item-name {
  display: flex;
  align-items: center;
  gap: 6px;
}

.progress-item-name h3 {
  margin: 0;
  font-size: 16px;
  font-weight: 500;
}

.progress-item-name p {
  margin: 0;
  font-size: 16px;
}

.progress-item.top {
  border-bottom: 1px solid #eee;
}

.progress-item:hover {
  background-color: #eee;
}

.role {
  font-size: 14px;
  color: #6b7280;
}

.profile-info {
  padding: 20px;
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.profile-info h4 {
  margin: 0;
  font-size: 14px;
  color: #797979;
  font-weight: 500;
}

.info-item {
  display: flex;
  flex-direction: column;
}

.label {
  font-size: 12px;
  color: #9ca3af;
}

.value {
  font-size: 14px;
  font-weight: 500;
}

.profile-actions {
  margin-top: auto;
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 20px;
  padding-top: 5px;
}

.drawer-btn {
  padding: 10px 12px;
  border-radius: 8px;
  font-size: 14px;
  border: 1px solid #e5e7eb;
  background: #f9fafb;
  cursor: pointer;
  transition: background 0.2s ease;
  display: flex;
  justify-content: center;
  gap: 10px;
}

.drawer-btn:hover {
  background: #f3f4f6;
}

.drawer-btn.primary {
  background: #2563eb;
  color: white;
  border: none;
}

.drawer-btn.primary:hover {
  background: #1d4ed8;
}

.drawer-btn.danger {
  background: #fee2e2;
  color: #991b1b;
  border: none;
}

.drawer-btn.danger:hover {
  background: #fecaca;
}

.drawer-btn img {
  width: 16px;
  display: flex;
}

.tab-title {
  display: flex;
  gap: 10px;
}

.tab-title img {
  width: 20px;
  transform: rotate(180deg);
}

.progress-list {
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
  height: 34vh;
  overflow-y: auto;
  overflow-x: hidden;
}

.completed-module-item {
  display: flex;
  width: 95%;
  margin: 10px;
  border: 1px solid #eee;
  border-radius: 10px;
  padding: 10px;
  justify-content: space-between;
}

.completed-module-item-left {
  display: flex;
  flex-direction: column;
  width: 80%;
}

.completed-module-item-name {
  display: flex;
  gap: 7px;
}

.completed-module-item-name h4 {
  color: black;
  font-size: 16px;
  line-height: 0.9;
}

.completed-module-item-meta {
  font-size: 12px;
  padding: 7px;
  padding-left: 0;
  padding-bottom: 0;
}

.completed-module-item-meta p {
  margin: 0;
}

.completed-module-item-score {
  --percent: 0;
  --ring-color: rgb(99, 197, 145);
  --ring-bg: rgb(222, 249, 235);

  display: flex;
  width: 40px;
  height: 40px;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  font-weight: 500;
  background: conic-gradient(
    var(--ring-color) calc(var(--percent) * 1%),
    var(--ring-bg) 0
  );
  position: relative;
}

.completed-module-item-score::before {
  content: "";
  position: absolute;
  inset: 3px;            
  background: white;
  border-radius: 50%;
}

.completed-module-item-score.green {
  --ring-color: rgb(99, 197, 145);
  --ring-bg: rgb(222, 249, 235);
  color: rgb(32, 138, 82);
}

.completed-module-item-score.blue {
  --ring-color: #3B82F6;  
  --ring-bg: #E0ECFF;  
  color: #1E40AF;  
}

.completed-module-item-score.orange {
  --ring-color: #F97316;   
  --ring-bg: #FFE7D1; 
  color: #9A3412;  
}

.completed-module-item-score.red {
  --ring-color: rgb(235, 90, 90);
  --ring-bg: rgb(255, 220, 220);
  color: rgb(150, 40, 40);
}

.completed-module-item-score p {
  position: absolute;
}

.completed-module-item-meta-item {
  display: flex;
  gap: 5px;
}

.completed-module-item-meta-item img {
  width: 16px;
}

.badge-item {
  display: flex;
  width: 95%;
  margin: 10px;
  border: 1px solid #eee;
  border-radius: 10px;
  padding: 15px;
  gap: 10px;
}

.badge-item-name {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.badge-item-name h4, p {
  margin: 0;
}

.badge-item-name h4 {
  color: black;
  font-size: 16px;
  line-height: 0.9;
}

.badge-item-name p {
  font-size: 12px;
}

